--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.UnBrokeBudgetApplication"
         tools:targetApi="31">
         <activity
+            android:name=".EmptyActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainScreen"
             android:exported="false">
             <meta-data
@@ -38,7 +45,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".LoginFragment"
+            android:name=".LoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
